--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.67.0",
     "three": "^0.156.1",
     "vite": "^4.4.5",
-    "vite-plugin-pwa": "^0.16.5"
+    "vite-plugin-pwa": "^0.16.5",
+    "vue-router": "^4.2.5"
   }
 }
