--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.67.0",
+    "swiper": "^11.0.4",
     "three": "^0.156.1",
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^0.16.5",
