--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "swiper": "^11.0.4",
     "three": "^0.156.1",
     "vite": "^4.4.5",
-    "vite-plugin-pwa": "^0.16.5",
+    "vue-i18n": "^9.4.1",
     "vue-router": "^4.2.5"
   }
 }
