--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "firebase": "^10.7.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "swiper": "^11.0.4",
+    "three": "^0.156.1",
+    "vite": "^4.4.5",
+    "vue-i18n": "^9.4.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -19,11 +24,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vitejs/plugin-vue": "^4.2.3",
-    "sass": "^1.67.0",
-    "swiper": "^11.0.4",
-    "three": "^0.156.1",
-    "vite": "^4.4.5",
-    "vue-i18n": "^9.4.1",
-    "vue-router": "^4.2.5"
+    "sass": "^1.67.0"
   }
 }
