--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.7.1",
-    "locomotive-scroll": "^4.1.4",
+    "moment": "^2.30.1",
     "swiper": "^11.0.4",
     "three": "^0.156.1",
     "vite": "^4.4.5",
