--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
     "@vite-pwa/nuxt": "0.4.0",
     "@vue-macros/nuxt": "1.9.20",
     "eslint": "8.56.0",
-    "nuxt": "3.9.1",
-    "taze": "0.13.1",
-    "vue-tsc": "1.8.27",
-    "simple-git-hooks": "2.9.0",
-
     "firebase": "^10.7.1",
     "moment": "^2.30.1",
+    "nuxt": "3.9.1",
+    "simple-git-hooks": "2.9.0",
     "swiper": "^11.0.4",
+    "taze": "0.13.1",
     "three": "^0.156.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-tsc": "1.8.27"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -41,9 +40,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "lint-staged": "^15.2.0",
     "sass": "^1.67.0"
   },
-
   "browserslist": [
     "defaults",
     "not dead",
@@ -55,5 +54,4 @@
   "lint-staged": {
     "*": "eslint --fix"
   }
-
 }
