--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@antfu/eslint-config": "2.6.2",
     "@nuxt/content": "2.10.0",
     "@nuxt/devtools": "1.0.6",
+    "@nuxt/image": "^1.3.0",
     "@nuxt/types": "2.17.2",
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge",
     "@vite-pwa/nuxt": "0.4.0",
