--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@vue-macros/nuxt": "1.9.20",
     "eslint": "8.56.0",
     "firebase": "^10.7.1",
-    "moment": "^2.30.1",
     "nuxt": "3.9.1",
+    "nuxt-icon": "^0.6.8",
     "simple-git-hooks": "2.9.0",
     "swiper": "^11.0.4",
     "taze": "0.13.1",
@@ -36,11 +36,6 @@
     "vue-tsc": "1.8.27"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/vue-fontawesome": "^3.0.3",
     "lint-staged": "^15.2.0",
     "sass": "^1.67.0"
   },
