--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vue-macros/nuxt": "1.9.20",
     "eslint": "8.56.0",
     "firebase": "^10.7.1",
+    "gsap": "^3.12.5",
+    "intersection-observer": "^0.12.2",
     "nuxt": "3.9.1",
     "nuxt-icon": "^0.6.8",
     "simple-git-hooks": "2.9.0",
