--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@nuxt/content": "2.10.0",
     "@nuxt/devtools": "1.0.6",
     "@nuxt/image": "^1.3.0",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-28444362.1cb9e70",
     "@nuxt/types": "2.17.2",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge",
     "@vite-pwa/nuxt": "0.4.0",
     "@vue-macros/nuxt": "1.9.20",
     "eslint": "8.56.0",
